# seamless-rag

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Install.md  JUDGES_TESTING_GUIDE.md  Makefile  README.md  RELEASING.md  TODO.md  docker-compose.test.yml  docker-compose.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: autorun.md
.claude/skills/seamless-rag/: SKILL.md
.claude/skills/text-to-sql/: SKILL.md
.github/workflows/: docs.yml  release.yml
ARCHITECTURE/: index.html
BENCHMARK_REAL_DATA/: index.html
CLI_TEST_REPORT/: index.html
HANDOFF/: index.html
SPECIFICATION/: index.html
api-reference/: index.html
contributing/: index.html
docs/: ARCHITECTURE.md  BENCHMARK_REAL_DATA.md  CLI_TEST_REPORT.md  HANDOFF.md  SPECIFICATION.md  api-reference.md  contributing.md  getting-started.md  index.md  judges-testing-guide.md  providers.md  toon-format.md
docs/internal/: HANDOFF.md  TODO.md
eval/: analyze.py  harness.py
getting-started/: index.html
internal/HANDOFF/: index.html
internal/JUDGES_TESTING_GUIDE/: index.html
internal/SPECIFICATION/: index.html
internal/TODO/: index.html
judges-testing-guide/: index.html
providers/: index.html
scripts/: demo.py  demo.tape  record_demo.sh  score.py
search/: search_index.json
skills/public/seamless-rag/: SKILL.md
skills/public/text-to-sql/: SKILL.md
src/seamless_rag/: __init__.py  cli.py  config.py  core.py  web.py
src/seamless_rag/benchmark/: __init__.py  compare.py
src/seamless_rag/llm/: __init__.py  factory.py  gemini.py  ollama.py  openai_provider.py  protocol.py
src/seamless_rag/pipeline/: __init__.py  embedder.py  rag.py  retrieval.py
src/seamless_rag/providers/: __init__.py  factory.py  gemini.py  ollama.py  openai_provider.py  protocol.py  sentence_transformers.py
src/seamless_rag/storage/: __init__.py  mariadb.py  protocol.py
src/seamless_rag/toon/: __init__.py  encoder.py
tests/: conftest.py
tests/eval/: conftest.py  test_retrieval_quality.py
tests/eval/golden_datasets/: rag_eval_set.json
tests/fixtures/: sample_documents.json
tests/integration/: conftest.py  test_providers_e2e.py  test_rag_end_to_end.py  test_vector_operations.py
tests/unit/: conftest.py  test_auto_embedder.py  test_cli.py  test_config.py  test_core_facade.py  test_embedding_provider.py  test_llm_provider.py  test_provider_factory.py  test_rag_pipeline.py  test_rag_with_llm.py  test_token_benchmark.py  test_toon_encoder.py  test_toon_properties.py  test_toon_snapshots.py  test_toon_spec_fixtures.py
tests/unit/__snapshots__/: test_toon_snapshots.ambr
toon-format/: index.html
