[project]
name = "seamless-rag"
version = "0.1.0"
description = "TOON-Native Auto-Embedding & RAG Toolkit for MariaDB"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "LiuWei", email = "TP085412@mail.apu.edu.my"}]
readme = "README.md"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
mariadb = ["mariadb>=1.1.14"]
embeddings = ["sentence-transformers>=5.0"]
ollama = ["ollama>=0.1"]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
web = ["gradio>=4.0"]
all = ["seamless-rag[mariadb,embeddings,ollama,gemini,openai,web]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.8",
    "mypy>=1.8",
]

[project.scripts]
seamless-rag = "seamless_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seamless_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires Docker/MariaDB)",
    "eval: RAG evaluation tests (requires LLM API)",
    "slow: Tests that take >10s",
    "spec: TOON spec conformance tests",
    "props: Property-based tests (hypothesis)",
]
addopts = "-v --tb=short --strict-markers"
timeout = 30

[tool.coverage.run]
source = ["src/seamless_rag"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/seamless_rag/cli.py" = ["B008"]
"tests/**" = ["E501", "B905", "E741", "B017"]
"tests/eval/**" = ["F401", "I001"]

[tool.mypy]
python_version = "3.12"
strict = true
