[project]
name = "seamless-rag"
version = "0.1.5"
description = "TOON-Native Auto-Embedding & RAG Toolkit for MariaDB — VECTOR(N), HNSW, VEC_DISTANCE_COSINE, with TOON tabular output that saves 10-55% LLM tokens vs JSON."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "LiuWei", email = "TP085412@mail.apu.edu.my"}]
readme = "README.md"
keywords = [
    "mariadb",
    "vector-search",
    "vector-database",
    "rag",
    "retrieval-augmented-generation",
    "embeddings",
    "toon",
    "llm",
    "hnsw",
    "semantic-search",
    "auto-embedding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.7.0",
    "sqlglot>=26.0",
]

[project.urls]
Homepage = "https://mariadb-hackathon-my-2026.github.io/seamless-rag/"
Documentation = "https://mariadb-hackathon-my-2026.github.io/seamless-rag/"
Repository = "https://github.com/MariaDB-Hackathon-MY-2026/seamless-rag"
Issues = "https://github.com/MariaDB-Hackathon-MY-2026/seamless-rag/issues"
Changelog = "https://github.com/MariaDB-Hackathon-MY-2026/seamless-rag/releases"
"Judges' Testing Guide" = "https://mariadb-hackathon-my-2026.github.io/seamless-rag/judges-testing-guide/"

[project.optional-dependencies]
# mariadb is a C extension; macOS/Linux users may need libmariadb-dev /
# mariadb-connector-c installed first. See README "Prerequisites" section.
mariadb = ["mariadb>=1.1.14"]
embeddings = ["sentence-transformers>=5.0"]
ollama = ["ollama>=0.1"]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
web = ["gradio>=4.0"]
all = ["seamless-rag[mariadb,embeddings,ollama,gemini,openai,web]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.8",
    "mypy>=1.8",
]

[project.scripts]
seamless-rag = "seamless_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seamless_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires Docker/MariaDB)",
    "eval: RAG evaluation tests (requires LLM API)",
    "slow: Tests that take >10s",
    "spec: TOON spec conformance tests",
    "props: Property-based tests (hypothesis)",
]
addopts = "-v --tb=short --strict-markers"
timeout = 30

[tool.coverage.run]
source = ["src/seamless_rag"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/seamless_rag/cli.py" = ["B008"]
"src/seamless_rag/web.py" = ["E501"]
"tests/**" = ["E501", "B905", "E741", "B017"]
"tests/eval/**" = ["F401", "I001"]

[tool.mypy]
python_version = "3.12"
strict = true
